FRA-17 Initial Kafka Cluster with Topic and User